--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,18 @@
     <title>Mi página web</title>
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li>
+            Opcion 1
+        </li>
+        <li>
+            Opcion 2
+        </li>
+        <li>
+            Opcion 3
+        </li>
+    </ul>
+</nav>
 </body>
 </html>
